Add default value for course status Describe /admin/course.. paths in swagger.yml
